--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,8 +16,9 @@
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
 
     <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/fragment"
+        android:id="@+id/explorer_fragment"
         android:layout_below="@id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
 </RelativeLayout>
