--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,15 @@
     <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/explorer_fragment"
         android:layout_below="@id/toolbar"
-        android:layout_width="match_parent"
+        android:layout_width="120dp"
         android:layout_height="match_parent" />
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/content_fragment"
+        android:layout_toEndOf="@id/explorer_fragment"
+        android:layout_toRightOf="@id/explorer_fragment"
+        android:layout_below="@id/toolbar"/>
 
 </RelativeLayout>
