--- a/app/src/main/res/layout/breadcrumb_fragment.xml
+++ b/app/src/main/res/layout/breadcrumb_fragment.xml
@@ -6,7 +6,8 @@
     android:background="#ffc400">
     <HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:scrollbarSize="0px">
     <com.example.blah.mobilestudio.breadcrumbview.BreadcrumbView
         android:id="@+id/bread_bar"
         android:layout_width="wrap_content"
