--- a/app/src/main/res/layout/breadcrumb_fragment.xml
+++ b/app/src/main/res/layout/breadcrumb_fragment.xml
@@ -13,10 +13,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:scrollbars="horizontal"
-        android:background="#69acff"
+        android:background="#267ae1"
         custom:orientation="horizontal"
         custom:breadcrumbBgColor="#ce44d6"
-        custom:breadcrumbTextColor = "#f9a41c"
+        custom:breadcrumbTextColor = "#8ae2ff"
         custom:breadcrumbTextSize = "14"
         custom:rootPath=""
         />
