--- a/app/src/main/res/layout/content_layout.xml
+++ b/app/src/main/res/layout/content_layout.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:background="@drawable/border"
-    android:padding="4dp"
     android:id="@+id/content_text"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:text="New Text"
-    android:scrollbars="vertical"/>
+    android:background="@drawable/border"
+    android:padding="4dp"
+    android:text="New Text" />
