--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,40 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    tools:context=".Activities.MainActivity"
+    android:weightSum="3"
+    android:orientation="vertical"
     android:layout_height="match_parent"
-    tools:context=".Activities.MainActivity">
+    android:layout_width="match_parent" >
 
-
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
-        android:elevation="4dp"
-        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+        android:layout_height="0dp"
+        android:layout_weight="2">
 
-    <fragment android:name="com.example.blah.mobilestudio.breadcrumbview.BreadcrumbFragment"
-        android:id="@+id/topBreadFragment"
-        android:layout_below="@id/toolbar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        >
-    </fragment>
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            android:elevation="4dp"
+            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
 
-    <fragment android:name="com.example.blah.mobilestudio.breadcrumbview.BreadcrumbFragmentVertical"
-        android:id="@+id/verticalTabFragment"
-        android:layout_below="@id/topBreadFragment"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" >
-    </fragment>
+        <fragment android:name="com.example.blah.mobilestudio.breadcrumbview.BreadcrumbFragment"
+            android:id="@+id/topBreadFragment"
+            android:layout_below="@id/toolbar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            >
+        </fragment>
 
-    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/fragment"
-        android:layout_below="@id/topBreadFragment"
-        android:layout_toRightOf="@id/verticalTabFragment"
+        <fragment android:name="com.example.blah.mobilestudio.breadcrumbview.BreadcrumbFragmentVertical"
+            android:id="@+id/verticalTabFragment"
+            android:layout_below="@id/topBreadFragment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" >
+        </fragment>
+
+        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/fragment"
+            android:layout_below="@id/topBreadFragment"
+            android:layout_toRightOf="@id/verticalTabFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+    </RelativeLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-</RelativeLayout>
+        android:layout_height="0dp"
+        android:layout_weight="1" >
+
+        <fragment
+            android:id="@+id/android_monitor"
+            android:name="com.example.blah.mobilestudio.AndroidMonitor.AndroidMonitorFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+    </LinearLayout>
+</LinearLayout>
