initial commit - Create the basis for the android monitor. Create a pager, pager adapter, and a basic tab fragment to hold text.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,9 +50,7 @@
         android:layout_height="match_parent"
         android:layout_below="@id/topBreadFragment"
         android:layout_toEndOf="@id/explorer_fragment"
-        android:layout_toRightOf="@id/explorer_fragment" />
-
-    </RelativeLayout>
+        android:layout_toRightOf="@id/explorer_fragment" />    </RelativeLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
