--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Activities.MainActivity">
@@ -14,41 +14,34 @@
         android:background="?attr/colorPrimary"
         android:elevation="4dp"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
-    <fragment android:name="com.example.blah.mobilestudio.breadcrumbview.BreadcrumbFragment"
+    <fragment
         android:id="@+id/topBreadFragment"
-        android:layout_below="@id/toolbar"
+        android:name="com.example.blah.mobilestudio.breadcrumbview.BreadcrumbFragment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        >
-    </fragment>
+        android:layout_below="@id/toolbar" />
 
-    <fragment android:name="com.example.blah.mobilestudio.breadcrumbview.BreadcrumbFragmentVertical"
+    <fragment
         android:id="@+id/verticalTabFragment"
-        android:layout_below="@id/topBreadFragment"
+        android:name="com.example.blah.mobilestudio.breadcrumbview.BreadcrumbFragmentVertical"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" >
-    </fragment>
+        android:layout_height="wrap_content"
+        android:layout_below="@id/topBreadFragment" />
 
     <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/explorer_fragment"
-        android:layout_below="@id/toolbar"
         android:layout_width="120dp"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_below="@id/topBreadFragment"
+        android:layout_toRightOf="@id/verticalTabFragment" />
 
     <FrameLayout
+        android:id="@+id/content_fragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/content_fragment"
-        android:layout_toEndOf="@id/explorer_fragment"
-        android:layout_toRightOf="@id/explorer_fragment"
-        android:layout_below="@id/toolbar"/>
-
-    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/fragment"
         android:layout_below="@id/topBreadFragment"
-        android:layout_toRightOf="@id/verticalTabFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_toEndOf="@id/explorer_fragment"
+        android:layout_toRightOf="@id/explorer_fragment" />
 </RelativeLayout>
