--- a/app/src/main/res/layout/content_layout.xml
+++ b/app/src/main/res/layout/content_layout.xml
@@ -1,9 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ListView xmlns:android="http://schemas.android.com/apk/res/android"
+<HorizontalScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fillViewport="true"
-    android:scrollbars="vertical"
-    android:id="@+id/file_list">
+    android:background="@drawable/border"
+    android:fillViewport="true">
 
-</ListView>
+    <ListView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/file_list"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:divider="#00000000"
+        android:scrollbars="vertical">
+
+    </ListView>
+</HorizontalScrollView>
