--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,56 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".Activities.MainActivity"
-    android:weightSum="3"
-    android:orientation="vertical"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_width="match_parent" >
+    android:orientation="vertical"
+    android:weightSum="3"
+    tools:context=".Activities.MainActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="2">
-<android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
-        android:elevation="4dp"
-        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
-    <fragment
-        android:id="@+id/topBreadFragment"
-        android:name="com.example.blah.mobilestudio.breadcrumbview.BreadcrumbFragment"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/toolbar" />
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            android:elevation="4dp"
+            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
-    <fragment
-        android:id="@+id/verticalTabFragment"
-        android:name="com.example.blah.mobilestudio.breadcrumbview.BreadcrumbFragmentVertical"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/topBreadFragment" />
+        <fragment
+            android:id="@+id/topBreadFragment"
+            android:name="com.example.blah.mobilestudio.breadcrumbview.BreadcrumbFragment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/toolbar" />
 
-    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/explorer_fragment"
-        android:layout_width="120dp"
-        android:layout_height="match_parent"
-        android:layout_below="@id/topBreadFragment"
-        android:layout_toRightOf="@id/verticalTabFragment" />
+        <fragment
+            android:id="@+id/verticalTabFragment"
+            android:name="com.example.blah.mobilestudio.breadcrumbview.BreadcrumbFragmentVertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/topBreadFragment" />
 
-    <FrameLayout
-        android:id="@+id/content_fragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/topBreadFragment"
-        android:layout_toEndOf="@id/explorer_fragment"
-        android:layout_toRightOf="@id/explorer_fragment" /> 
-
+        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/explorer_fragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/topBreadFragment"
+            android:layout_toRightOf="@id/verticalTabFragment" />
     </RelativeLayout>
 
     <LinearLayout
@@ -63,8 +55,7 @@
             android:id="@+id/android_monitor"
             android:name="com.example.blah.mobilestudio.AndroidMonitor.AndroidMonitorFragment"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            />
+            android:layout_height="match_parent" />
 
     </LinearLayout>
 </LinearLayout>
