--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".Activities.MainActivity"
     android:weightSum="3"
-    tools:context=".Activities.MainActivity">
+    android:orientation="vertical"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent" >
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -39,10 +39,19 @@
 
         <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/explorer_fragment"
-            android:layout_width="match_parent"
+            android:layout_width="120dp"
             android:layout_height="match_parent"
             android:layout_below="@id/topBreadFragment"
             android:layout_toRightOf="@id/verticalTabFragment" />
+
+        <FrameLayout
+            android:id="@+id/content_fragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/topBreadFragment"
+            android:layout_toEndOf="@id/explorer_fragment"
+            android:layout_toRightOf="@id/explorer_fragment" />
+
     </RelativeLayout>
 
     <LinearLayout
@@ -55,7 +64,8 @@
             android:id="@+id/android_monitor"
             android:name="com.example.blah.mobilestudio.AndroidMonitor.AndroidMonitorFragment"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            />
 
     </LinearLayout>
 </LinearLayout>
