--- a/app/src/main/res/layout/breadcrumb_fragment.xml
+++ b/app/src/main/res/layout/breadcrumb_fragment.xml
@@ -15,7 +15,7 @@
         android:scrollbars="horizontal"
         android:background="#267ae1"
         custom:orientation="horizontal"
-        custom:breadcrumbBgColor="#ce44d6"
+        custom:breadcrumbBgColor="#267ae1"
         custom:breadcrumbTextColor = "#8ae2ff"
         custom:breadcrumbTextSize = "14"
         custom:rootPath=""
