--- a/app/src/main/res/layout/content_layout.xml
+++ b/app/src/main/res/layout/content_layout.xml
@@ -1,7 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<WebView
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/web_layout"/>
+    android:layout_width="match_parent">
+    <WebView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/web_layout"/>
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/image_layout"
+        android:layout_gravity="center"/>
+
+</FrameLayout>
 
