--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,15 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Activities.MainActivity"
-    android:weightSum="3"
+    android:id="@+id/screen_layout"
     android:orientation="vertical"
     android:layout_height="match_parent"
-    android:layout_width="match_parent" >
+    android:layout_width="match_parent">
 
     <RelativeLayout
+        android:id="@+id/top_layout"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="2">
+        android:layout_height="match_parent" >
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
@@ -37,32 +37,39 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/topBreadFragment" />
 
+
         <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/explorer_fragment"
-            android:layout_width="120dp"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@id/topBreadFragment"
             android:layout_toRightOf="@id/verticalTabFragment" />
+
+        <FrameLayout
+            android:id="@+id/explorer_content_resizer_fragment"
+            android:layout_width="@dimen/resizer_move_size"
+            android:layout_height="match_parent"
+            android:layout_below="@id/topBreadFragment"
+            android:layout_toRightOf="@id/explorer_fragment"/>
 
         <FrameLayout
             android:id="@+id/content_fragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@id/topBreadFragment"
-            android:layout_toEndOf="@id/explorer_fragment"
-            android:layout_toRightOf="@id/explorer_fragment" />
+            android:layout_toRightOf="@id/explorer_content_resizer_fragment"
+            android:layout_toEndOf="@id/explorer_content_resizer_fragment" />
 
     </RelativeLayout>
 
     <LinearLayout
+        android:id="@+id/android_monitor_outer_layout"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_height="match_parent"
         android:background="@color/very_light_grey">
 
-        <fragment
+        <FrameLayout
             android:id="@+id/android_monitor"
-            android:name="com.example.blah.mobilestudio.AndroidMonitor.AndroidMonitorFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             />
