--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:weightSum="3"
-        tools:context=".Activities.MainActivity">
+        tools:context=".activities.MainActivity">
 
         <RelativeLayout
             android:layout_width="match_parent"
