--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Activities.MainActivity"
     android:id="@+id/screen_layout"
-    android:orientation="vertical"
     android:layout_height="match_parent"
     android:layout_width="match_parent">
 
@@ -45,7 +44,7 @@
             android:layout_toRightOf="@id/verticalTabFragment" />
 
         <FrameLayout
-            android:id="@+id/explorer_content_resizer_fragment"
+            android:id="@+id/explorer_content_resizer_horizontal_fragment"
             android:layout_width="@dimen/resizer_move_size"
             android:layout_height="match_parent"
             android:layout_below="@id/topBreadFragment"
@@ -56,15 +55,22 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@id/topBreadFragment"
-            android:layout_toRightOf="@id/explorer_content_resizer_fragment"
-            android:layout_toEndOf="@id/explorer_content_resizer_fragment" />
+            android:layout_toRightOf="@id/explorer_content_resizer_horizontal_fragment"
+            android:layout_toEndOf="@id/explorer_content_resizer_horizontal_fragment" />
 
     </RelativeLayout>
+
+    <FrameLayout
+        android:id="@+id/top_monitor_resizer_vertical_fragment"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/resizer_move_size"
+        android:layout_below="@id/top_layout"/>
 
     <LinearLayout
         android:id="@+id/android_monitor_outer_layout"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
+        android:layout_below="@id/top_monitor_resizer_vertical_fragment"
         android:background="@color/very_light_grey">
 
         <FrameLayout
@@ -74,4 +80,4 @@
             />
 
     </LinearLayout>
-</LinearLayout>
+</RelativeLayout>
