Created a new resize image, and added it to the horizontal and vertical resizers

--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -71,7 +71,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/top_monitor_resizer_vertical_fragment"
-        android:background="@color/very_light_grey">
+        android:background="@color/white">
 
         <FrameLayout
             android:id="@+id/android_monitor"
