--- a/app/src/main/res/layout/horizontal_resizer.xml
+++ b/app/src/main/res/layout/horizontal_resizer.xml
@@ -13,11 +13,12 @@
         android:layout_weight="1"
         android:background="@color/very_light_grey" />
 
-    <View
+    <ImageView
         android:id="@+id/resizer_horizontal_view"
         android:layout_width="@dimen/resizer_move_size"
-        android:layout_height="@dimen/resizer_move_size"
-        android:background="@drawable/resizable_horizontal"
+        android:layout_height="wrap_content"
+        android:src="@drawable/resizable_horizontal"
+        android:background="@color/very_light_grey"
         android:layout_gravity="center" />
 
     <View
